Fixed responsiveness with a tags under dropdown

--- a/Homework1/index.html
+++ b/Homework1/index.html
@@ -19,20 +19,18 @@
             width: 6%;
             /* padding: 1.5%,1.5%; */
             font-size:2em;
-            /* margin:0; */
         }
         .dropdownItems {
             position: absolute;
             display: none; /*this none will keep it hidden til the hover is hit */
             background-color:#4CAF50;
-            min-width:7%;
+            width: 100%;
             z-index: 2;
-
+            /* padding: .3%,.3%; */
         }
 
         .dropdownItems a {
             color: black;
-            padding: .3%,.3%;
             text-decoration: none;
             display:block;
             width:100%;
