--- a/Homework1/index.html
+++ b/Homework1/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=3, initial-scale=1.0">
     <title>Document</title>
     <style>
+        /* The following is navbar styling */
         .navbarContainer {
             max-width: 100%;
             max-height: 10%;
@@ -13,11 +14,10 @@
 
             
         }
-        .dropdown {
+        .dropdownDiv {
             position: relative;
             display: inline-block;
             width: 10%;
-            /* padding: 1.5%,1.5%; */
             font-size:1.2em;
             margin: 0;
 
@@ -46,7 +46,7 @@
             text-align:center;
             justify-content: center;
         }
-        .dropdown:hover .dropdownItems {
+        .dropdownDiv:hover .dropdownItems {
             display: block;
         }
 
@@ -71,14 +71,33 @@
             background-color:#8cfe90
         }
 
-        .onClick:focus-within .dropdownItems {
+        .onClick:focus-within .dropdownItems { /* must include .dropdownItems or else when you click, it will mess up the navbar*/
             display: block;
         }
+
+        /* The following is text box styling */
+
+        .textDiv {
+            width:90%;
+            background-color:white;
+            margin-top: 2%;
+            margin-bottom: 2%;
+            padding-top:1%;
+            padding-bottom:1%;
+            padding-left:1%;
+            margin-left: 5%;
+            margin-right: 5%;
+            justify-content: center;
+            font-size: 1.1em;
+            max-height: 100%;
+            max-width: 100%;
+        }
+
     </style>
 </head>
 <body>
     <div class = "navbarContainer">
-        <div class = "dropdown">
+        <div class = "dropdownDiv">
             <button><strong>File</strong></button>
             <div class = "dropdownItems"> 
                 <a href="#">New</a>
@@ -88,7 +107,7 @@
                 <a href="#">Close</a>
             </div>
         </div>
-        <div class = "dropdown onClick">
+        <div class = "dropdownDiv onClick">
             <button>Edit</button>
             <div class = "dropdownItems"> 
                 <a href="#">Undo</a>
@@ -100,7 +119,7 @@
                 <a href="#">Select all</a>
             </div>
         </div>
-        <div class = "dropdown">
+        <div class = "dropdownDiv">
             <button><strong>View</strong></button>
             <div class = "dropdownItems"> 
                 <a href="#">Zoom in</a>
@@ -115,6 +134,20 @@
             </div>
         </div>
     </div>
-    
+    <div class = "textDiv"> 
+        <h1>Lorem Ipsum</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing 
+            elit. Aenean sed mi ligula. Donec vel pulvinar nulla, 
+            id viverra odio. In venenatis ligula cursus tellus convallis.
+        </p>
+    </div>
+    <div class = "textDiv"> 
+        <h1>Lorem Ipsum</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing
+             elit. Aenean sed mi ligula. Donec vel pulvinar nulla,
+              id viverra odio. In venenatis ligula cursus tellus convallis.
+        </p>
+
+    </div>
 </body>
 </html>
